--- a/index.html
+++ b/index.html
@@ -4,252 +4,7 @@
   <meta charset="UTF-8" />
   <title>Help Me Decide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root {
-      color-scheme: light dark;
-    }
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 12px;
-      background: #f3f4f6;
-      -webkit-font-smoothing: antialiased;
-      transition: background 0.2s ease;
-    }
-    body.landing-active {
-      height: 100vh;
-      overflow: hidden;
-    }
-    .app {
-      max-width: 900px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 16px;
-      border-radius: 14px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-    }
-    h1 {
-      margin: 0 0 4px;
-      font-size: 1.6rem;
-      text-align: center;
-    }
-    .subtitle {
-      text-align: center;
-      font-size: 0.88rem;
-      color: #6b7280;
-      margin-bottom: 12px;
-    }
-    .label {
-      font-size: 0.75rem;
-      text-transform: uppercase;
-      color: #6b7280;
-      letter-spacing: 0.08em;
-      margin-bottom: 4px;
-    }
-    textarea {
-      width: 100%;
-      min-height: 120px;
-      resize: vertical;
-      padding: 10px;
-      font-size: 0.98rem;
-      border-radius: 10px;
-      border: 1px solid #d1d5db;
-      box-sizing: border-box;
-    }
-    textarea:focus {
-      outline: none;
-      border-color: #2563eb;
-      box-shadow: 0 0 0 1px #2563eb33;
-    }
-    .button-row {
-      margin-top: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-    }
-    button {
-      cursor: pointer;
-      padding: 10px 16px;
-      border-radius: 999px;
-      border: none;
-      font-size: 0.98rem;
-      flex-shrink: 0;
-    }
-    button.primary {
-      background: #2563eb;
-      color: #ffffff;
-      font-weight: 600;
-    }
-    button.secondary {
-      background: #e5e7eb;
-      color: #111827;
-    }
-    button:disabled {
-      opacity: 0.55;
-      cursor: default;
-    }
-    .status-row {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 8px;
-      font-size: 0.8rem;
-      color: #374151;
-      margin-top: 12px;
-    }
-    .progress-bar-wrapper {
-      margin-top: 4px;
-      background: #e5e7eb;
-      border-radius: 999px;
-      overflow: hidden;
-      height: 8px;
-    }
-    .progress-bar {
-      height: 8px;
-      width: 0;
-      background: #22c55e;
-      transition: width 0.2s ease;
-    }
-    .pair-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 16px;
-    }
-    .choice-card {
-      flex: 1 1 220px;
-      border-radius: 14px;
-      border: 1px solid #e5e7eb;
-      padding: 14px;
-      background: #f9fafb;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .option-name {
-      font-weight: 600;
-      font-size: 1.05rem;
-      word-wrap: break-word;
-      margin-bottom: 10px;
-    }
-    .choice-card button {
-      width: 100%;
-      margin-top: 4px;
-      padding: 12px;
-      font-size: 1rem;
-    }
-    .tip {
-      font-size: 0.8rem;
-      color: #6b7280;
-      margin-top: 8px;
-    }
-    .ranking {
-      margin-top: 18px;
-    }
-    .ranking h3 {
-      font-size: 1rem;
-      margin: 0 0 4px;
-    }
-    .ranking table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 0.88rem;
-    }
-    .ranking th, .ranking td {
-      padding: 6px 4px;
-      border-bottom: 1px solid #e5e7eb;
-      text-align: left;
-    }
-    .ranking th {
-      font-weight: 600;
-      color: #4b5563;
-    }
-    .empty-state {
-      font-size: 0.9rem;
-      color: #6b7280;
-      margin-top: 6px;
-    }
-
-    /* Landing page */
-    #landingSection {
-      min-height: calc(100vh - 24px);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 16px;
-    }
-    .landing-header {
-      text-align: center;
-      margin-bottom: 4px;
-    }
-    .landing-title {
-      font-size: 1.9rem;
-      font-weight: 700;
-      margin-bottom: 4px;
-    }
-    .landing-subtitle {
-      font-size: 0.9rem;
-      color: #6b7280;
-    }
-    .landing-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 12px;
-      margin-top: 12px;
-    }
-    .landing-card {
-      border-radius: 14px;
-      border: 1px solid #e5e7eb;
-      padding: 14px;
-      background: #f9fafb;
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      transition: transform 0.08s ease, box-shadow 0.08s ease, border-color 0.08s ease;
-    }
-    .landing-card:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 3px 8px rgba(0,0,0,0.05);
-      border-color: #2563eb44;
-    }
-    .landing-card-title {
-      font-weight: 600;
-      font-size: 1rem;
-      margin-bottom: 6px;
-    }
-    .landing-card-desc {
-      font-size: 0.85rem;
-      color: #6b7280;
-      margin-bottom: 8px;
-    }
-    .landing-card-cta {
-      font-size: 0.8rem;
-      font-weight: 600;
-      color: #2563eb;
-    }
-    .landing-footer {
-      text-align: center;
-      font-size: 0.78rem;
-      color: #9ca3af;
-    }
-
-    @media (max-width: 640px) {
-      body {
-        padding: 8px;
-      }
-      .app {
-        padding: 12px;
-        border-radius: 10px;
-      }
-      .pair-container {
-        flex-direction: column;
-      }
-      #landingSection {
-        min-height: calc(100vh - 16px);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="landing-active">
   <div class="app">
@@ -363,243 +118,13 @@
     </section>
   </div>
 
-  <script>
-    let items = [];   // { id, name, wins }
-    let pairs = [];   // [i, j]
-    let pairIndex = 0;
+  <!-- Preset data files -->
+  <script src="js/presets-restaurants.js"></script>
+  <script src="js/presets-baby-names.js"></script>
+  <script src="js/presets-movies.js"></script>
+  <script src="js/presets-travel.js"></script>
 
-    const presets = {
-      restaurants: [
-        "Italian",
-        "Sushi",
-        "Mexican",
-        "Thai",
-        "Indian",
-        "Burgers",
-        "Pizza",
-        "Mediterranean",
-        "BBQ",
-        "Vegan / Vegetarian"
-      ],
-      babyNames: [
-        "Olivia",
-        "Liam",
-        "Emma",
-        "Noah",
-        "Ava",
-        "Oliver",
-        "Sophia",
-        "Elijah",
-        "Amelia",
-        "Mateo"
-      ],
-      movies: [
-        "Inception",
-        "The Dark Knight",
-        "Everything Everywhere All at Once",
-        "Parasite",
-        "Spider-Man: Into the Spider-Verse",
-        "The Godfather",
-        "Interstellar",
-        "Knives Out",
-        "Mad Max: Fury Road",
-        "Get Out"
-      ],
-      travel: [
-        "Tokyo",
-        "Paris",
-        "New York City",
-        "Rome",
-        "London",
-        "Reykjavík (Iceland)",
-        "Kyoto",
-        "Amsterdam",
-        "Barcelona",
-        "Vancouver"
-      ]
-    };
-
-    function goToMain() {
-      document.getElementById("landingSection").style.display = "none";
-      document.getElementById("mainSection").style.display = "block";
-      document.body.classList.remove("landing-active");
-      window.scrollTo({ top: 0, behavior: "instant" });
-    }
-
-    function startPreset(key) {
-      const preset = presets[key];
-      if (!preset) return;
-      const input = document.getElementById("listInput");
-      input.value = preset.join("\n");
-      goToMain();
-      startComparison();
-    }
-
-    function loadExample() {
-      const example = [
-        "Pizza Palace",
-        "Sushi World",
-        "Burger Town",
-        "Taco Fiesta",
-        "Indian Delight",
-        "Ramen House",
-        "BBQ Shack"
-      ].join("\n");
-      document.getElementById("listInput").value = example;
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    }
-
-    function clearAll() {
-      document.getElementById("listInput").value = "";
-      items = [];
-      pairs = [];
-      pairIndex = 0;
-      document.getElementById("comparisonSection").style.display = "none";
-    }
-
-    function startComparison() {
-      const rawLines = document
-        .getElementById("listInput")
-        .value
-        .split("\n")
-        .map(s => s.trim())
-        .filter(Boolean);
-
-      if (rawLines.length < 2) {
-        alert("Please enter at least 2 options.");
-        return;
-      }
-
-      const uniqueNames = Array.from(new Set(rawLines));
-
-      items = uniqueNames.map((name, idx) => ({
-        id: idx,
-        name,
-        wins: 0
-      }));
-
-      pairs = [];
-      for (let i = 0; i < items.length; i++) {
-        for (let j = i + 1; j < items.length; j++) {
-          pairs.push([i, j]);
-        }
-      }
-
-      // Shuffle pairs
-      for (let i = pairs.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [pairs[i], pairs[j]] = [pairs[j], pairs[i]];
-      }
-
-      pairIndex = 0;
-
-      document.getElementById("itemsCountLabel").textContent =
-        items.length + " option" + (items.length === 1 ? "" : "s");
-
-      document.getElementById("comparisonSection").style.display = "block";
-      showCurrentPair();
-      updateProgress();
-      updateRanking();
-
-      setTimeout(() => {
-        document.getElementById("comparisonSection").scrollIntoView({ behavior: "smooth" });
-      }, 50);
-    }
-
-    function showCurrentPair() {
-      const optionAName = document.getElementById("optionAName");
-      const optionBName = document.getElementById("optionBName");
-      const btnA = document.getElementById("optionAButton");
-      const btnB = document.getElementById("optionBButton");
-
-      if (pairIndex >= pairs.length) {
-        optionAName.textContent = "No more comparisons.";
-        optionBName.textContent = "You’re done!";
-        btnA.disabled = true;
-        btnB.disabled = true;
-        btnA.textContent = "Done";
-        btnB.textContent = "Done";
-        return;
-      }
-
-      const [i, j] = pairs[pairIndex];
-      optionAName.textContent = items[i].name;
-      optionBName.textContent = items[j].name;
-      btnA.disabled = false;
-      btnB.disabled = false;
-      btnA.textContent = "Pick A";
-      btnB.textContent = "Pick B";
-    }
-
-    function choose(choice) {
-      if (pairIndex >= pairs.length) return;
-
-      const [i, j] = pairs[pairIndex];
-      if (choice === "A") {
-        items[i].wins += 1;
-      } else if (choice === "B") {
-        items[j].wins += 1;
-      }
-
-      pairIndex += 1;
-      updateProgress();
-      updateRanking();
-      showCurrentPair();
-    }
-
-    function updateProgress() {
-      const total = pairs.length;
-      const done = Math.min(pairIndex, total);
-      const remaining = Math.max(total - done, 0);
-
-      const progressLabel = document.getElementById("progressLabel");
-      const progressBar = document.getElementById("progressBar");
-
-      if (total === 0) {
-        progressLabel.textContent = "";
-        progressBar.style.width = "0%";
-        return;
-      }
-
-      const percent = (done / total) * 100;
-      progressLabel.textContent =
-        "Compared " + done + " of " + total + " pairs (" +
-        percent.toFixed(1) + "%), " +
-        remaining + " left";
-
-      progressBar.style.width = percent + "%";
-    }
-
-    function updateRanking() {
-      if (!items.length) return;
-
-      const rankingContainer = document.getElementById("rankingContainer");
-      const sorted = [...items].sort((a, b) => b.wins - a.wins || a.name.localeCompare(b.name));
-
-      let html = "<table><thead><tr>" +
-        "<th>#</th><th>Option</th><th>Wins</th>" +
-        "</tr></thead><tbody>";
-
-      sorted.forEach((item, idx) => {
-        html += "<tr>" +
-          "<td>" + (idx + 1) + "</td>" +
-          "<td>" + escapeHtml(item.name) + "</td>" +
-          "<td>" + item.wins + "</td>" +
-          "</tr>";
-      });
-
-      html += "</tbody></table>";
-
-      rankingContainer.classList.remove("empty-state");
-      rankingContainer.innerHTML = html;
-    }
-
-    function escapeHtml(str) {
-      return str
-        .replace(/&/g, "&amp;")
-        .replace(/</g, "&lt;")
-        .replace(/>/g, "&gt;");
-    }
-  </script>
+  <!-- Main app logic -->
+  <script src="js/app.js"></script>
 </body>
 </html>
