--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body class="landing-active">
+<body class="landing-active theme-light">
   <div class="app">
+    <!-- Theme toggle -->
+    <div class="theme-toggle-container">
+      <button
+        id="themeToggle"
+        class="theme-toggle"
+        type="button"
+        aria-label="Toggle light and dark mode"
+      >
+        <span class="theme-icon theme-icon-sun">☀</span>
+        <span class="theme-icon theme-icon-moon">🌙</span>
+      </button>
+    </div>
+
     <!-- Landing / First Page -->
     <section id="landingSection">
       <div class="landing-header">
