--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 <body class="landing-active theme-light">
   <div class="app">
 
-    <!-- GLOBAL HEADER BAR -->
+    <!-- Top bar: back, logo, theme -->
     <div class="topbar">
-      <button id="changeListButton" class="topbar-button" onclick="backToLanding()" style="display:none;">
+      <button
+        id="changeListButton"
+        class="topbar-button"
+        type="button"
+        onclick="backToLanding()"
+        style="display:none;"
+      >
         ← Change list
       </button>
 
-      <div class="topbar-logo">🤔 Help Me Decide</div>
+      <div class="topbar-logo">
+        🤔 Help Me Decide
+      </div>
 
-      <button id="themeToggle" class="theme-toggle" type="button" aria-label="Toggle light/dark">
+      <button
+        id="themeToggle"
+        class="theme-toggle"
+        type="button"
+        aria-label="Toggle light and dark mode"
+      >
         <span class="theme-icon theme-icon-sun">☀</span>
         <span class="theme-icon theme-icon-moon">🌙</span>
       </button>
@@ -27,67 +40,81 @@
     <section id="landingSection">
       <div class="landing-header">
         <div class="landing-title">Help Me Decide</div>
-        <div class="landing-subtitle">Pick something to rank.</div>
+        <div class="landing-subtitle">
+          Compare two at a time to quickly rank your favorites.
+        </div>
       </div>
 
       <div class="landing-grid">
-
         <div class="landing-card" onclick="startPreset('restaurants')">
-          <div><div class="landing-card-title">Restaurant types</div>
-          <div class="landing-card-desc">Can’t pick what to eat?</div></div>
+          <div>
+            <div class="landing-card-title">Restaurant types</div>
+            <div class="landing-card-desc">Can’t pick what to eat?</div>
+          </div>
           <div class="landing-card-cta">Use cuisines →</div>
         </div>
 
         <div class="landing-card" onclick="startPreset('babyNames')">
-          <div><div class="landing-card-title">Baby names</div>
-          <div class="landing-card-desc">Quickly narrow down.</div></div>
-          <div class="landing-card-cta">Use names →</div>
+          <div>
+            <div class="landing-card-title">Baby names</div>
+            <div class="landing-card-desc">Quickly narrow down names.</div>
+          </div>
+          <div class="landing-card-cta">Use baby names →</div>
         </div>
 
         <div class="landing-card" onclick="startPreset('movies')">
-          <div><div class="landing-card-title">Movies</div>
-          <div class="landing-card-desc">Build your watchlist.</div></div>
-          <div class="landing-card-cta">Use movies →</div>
+          <div>
+            <div class="landing-card-title">Movies</div>
+            <div class="landing-card-desc">Build your watchlist.</div>
+          </div>
+          <div class="landing-card-cta">Use movie list →</div>
         </div>
 
         <div class="landing-card" onclick="startPreset('travel')">
-          <div><div class="landing-card-title">Travel destinations</div>
-          <div class="landing-card-desc">Where should you go?</div></div>
-          <div class="landing-card-cta">Use destinations →</div>
+          <div>
+            <div class="landing-card-title">Travel destinations</div>
+            <div class="landing-card-desc">Where should you go?</div>
+          </div>
+          <div class="landing-card-cta">Use travel list →</div>
         </div>
 
         <div class="landing-card" onclick="startPreset('ghibli')">
-          <div><div class="landing-card-title">Ghibli Movies</div>
-          <div class="landing-card-desc">Rank all Ghibli films.</div></div>
+          <div>
+            <div class="landing-card-title">Ghibli Movies</div>
+            <div class="landing-card-desc">Rank every Studio Ghibli film.</div>
+          </div>
           <div class="landing-card-cta">Use Ghibli list →</div>
         </div>
 
         <div class="landing-card" onclick="goToCustom()">
-          <div><div class="landing-card-title">Custom list</div>
-          <div class="landing-card-desc">Paste your own options.</div></div>
-          <div class="landing-card-cta">Start custom →</div>
+          <div>
+            <div class="landing-card-title">Custom list</div>
+            <div class="landing-card-desc">Paste your own options.</div>
+          </div>
+          <div class="landing-card-cta">Start custom list →</div>
         </div>
-
       </div>
     </section>
 
-    <!-- Custom List -->
+    <!-- Custom List Page -->
     <section id="customSection" style="display:none;">
       <h1>Custom list</h1>
-
       <div>
         <div class="label">Options (one per line)</div>
-        <textarea id="customListInput" placeholder="Option 1&#10;Option 2&#10;Option 3"></textarea>
+        <textarea
+          id="customListInput"
+          placeholder="Option 1&#10;Option 2&#10;Option 3"
+        ></textarea>
 
         <div class="button-row">
           <button class="primary" onclick="startCustomComparison()">Start comparing</button>
-          <button class="secondary" onclick="loadExample()">Example list</button>
+          <button class="secondary" onclick="loadExample()">Load example</button>
           <button class="secondary" onclick="backToLanding()">Back</button>
         </div>
       </div>
     </section>
 
-    <!-- Decision Page -->
+    <!-- Decision / Ranking Page -->
     <section id="decisionSection" style="display:none;">
       <h1 id="decisionTitle">Ranking</h1>
 
@@ -117,21 +144,23 @@
 
         <div class="ranking">
           <h3>Live ranking</h3>
-          <div id="rankingContainer" class="empty-state">Start comparing…</div>
+          <div id="rankingContainer" class="empty-state">
+            Start comparing…
+          </div>
         </div>
       </div>
     </section>
 
   </div>
 
-  <!-- Presets -->
+  <!-- Preset data files -->
   <script src="js/presets-restaurants.js"></script>
   <script src="js/presets-baby-names.js"></script>
   <script src="js/presets-movies.js"></script>
   <script src="js/presets-travel.js"></script>
   <script src="js/presets-ghibli.js"></script>
 
-  <!-- App Logic -->
+  <!-- Main app logic -->
   <script src="js/app.js"></script>
 </body>
 </html>
